# dvc-example

./: .gitignore  README.md  data.txt.dvc  dvc.yaml  pyproject.toml
.dvc/: config
dvc_plots/: index.html
