[tool.poetry]
name = "dvc-example"
version = "0.1.0"
description = ""
authors = ["krauhen <henning.krause90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dvclive = ">=3.0"
pandas = "^2.2.2"
pyaml = "^24.4.0"
scikit-learn = ">=1.3"
scipy = "^1.14.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
